samples/_failures_safe/1761351375_27210a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0475eee6.c: In function ‘main’:
./samples/SAFE/__tmp_0475eee6.c:164:46: error: ‘MAX’ undeclared (first use in this function)
  164 |     int num_tokens = tokenize(input, tokens, MAX
      |                                              ^~~
./samples/SAFE/__tmp_0475eee6.c:164:46: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0475eee6.c:164:49: error: expected ‘)’ at end of input
  164 |     int num_tokens = tokenize(input, tokens, MAX
      |                              ~                  ^
      |                                                 )
./samples/SAFE/__tmp_0475eee6.c:164:5: error: expected declaration or statement at end of input
  164 |     int num_tokens = tokenize(input, tokens, MAX
      |     ^~~
